--- a/style.css
+++ b/style.css
@@ -10,5 +10,23 @@ body {
   font-family: lato;
   width: 1000px;
   margin 0 auto;
+  background-color: #FAF3DD;
+  font-size: 12px;
+  color: #FE6472;
+  align-items: center;
+  justify-content: center;
+}
+
+header {
+  background-color: #AED9E0;
+}
+
+header h1 {
+  size: 64px;
+  color: #ffa69e;
+}
+
+header p {
+  size: 32px;
 }
 </style>
