--- a/style.css
+++ b/style.css
@@ -29,4 +29,14 @@ header h1 {
 header p {
   size: 32px;
 }
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+nav a:hover{
+  color: ##ffa19e;
+}
 </style>
