--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
 
 body {
   font-family: lato;
-  width: 1000px;
+  width: 960px;
   margin 0 auto;
+  padding: 0px 80px;
   background-color: #FAF3DD;
   font-size: 16px;
   color: #FE6472;
