--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Lato, Arial; // imported font from google
+  font-family: Lato, Arial; /* imported font from google */
   background-color: grey;
   font-size: 17px;
   color: #1d4e89;
@@ -31,9 +31,10 @@ h2, h3 {
 
 img {
   height: 400px;
+  /* width: 300px; including height can distort the image. Need to research a way to crop instead of warp the image */
   display: block;
   margin-left: auto;
-  margin-right: auto; // not completely clear what 'auto' means in these cases, but it helps center the images
+  margin-right: auto; /* not completely clear what 'auto' means in these cases, but it helps center the images */
 
 }
 
@@ -46,7 +47,7 @@ header, footer {
 header h1 {
   font-size: 44px;
   color: white;
-  margin-top: 0px; // Without this code, there's an extra margin above my header
+  margin-top: 0px; /* Without this code, there's an extra margin above my header */
 }
 
 footer {
@@ -55,7 +56,7 @@ footer {
 
 }
 footer p {
-  margin-bottom: 0px; // Without this code, there's an extra margin below my footer
+  margin-bottom: 0px; /* Without this code, there's an extra margin below my footer */
   padding-top:10px;
 }
 
@@ -96,4 +97,9 @@ hr {
   border-radius: 78%;
   padding: 2px 0px;
   background-color: white;
+}
+.centered-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
