--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Lato, Arial; /* imported font from google */
-  background-color: grey;
+  background-color: #f4f0ec;
   font-size: 17px;
   color: #1d4e89;
 }
