--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ hr {
   padding: 2px 0px;
   background-color: white;
 }
+/* had difficulty centered the google maps link within html code */
 .centered-image {
   display: block;
   margin-left: auto;
